DB_Proxy/networkpolicy.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: allow-mongo-db-egress
  namespace: default
spec:
  selector: app == 'mongo-proxy'
  egress:
  - action: Allow
    protocol: TCP
    destination:
      nets:
        - 192.168.86.143/32
      ports:
        - 27017
  - action: Allow
    protocol: UDP
    destination:
      ports:
        - 53
  - action: Allow  # Allow established connections (return path)
    protocol: TCP
    destination:
      ports:
        - 443
        - 80
  - action: Allow  # Fallback allow all internal cluster traffic
    destination:
      nets:
        - 10.0.0.0/8
        - 192.168.0.0/16
